{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 202,
  "lineage": "76a3db0d-2463-ca66-5b29-f79540669b2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chrisbarm_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0142fcaa6179b07b6",
            "arn": "arn:aws:ec2:us-east-1:198547498722:elastic-ip/eipalloc-0142fcaa6179b07b6",
            "domain": "vpc",
            "id": "eipalloc-0142fcaa6179b07b6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-196-69-15.compute-1.amazonaws.com",
            "public_ip": "54.196.69.15",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-nat-eip01"
            },
            "tags_all": {
              "Name": "chrisbarm-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chrisbarm_ec2_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:198547498722:instance/i-019c2d6369124824f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chrisbarm-instance-profile01",
            "id": "i-019c2d6369124824f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-085527e26b673aa4c"
              }
            ],
            "primary_network_interface_id": "eni-085527e26b673aa4c",
            "private_dns": "ip-10-0-101-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.214",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0824414a20259dc6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e4b43455b66f6fc",
            "tags": {
              "Name": "chrisbarm-ec2_01"
            },
            "tags_all": {
              "Name": "chrisbarm-ec2_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0ad4cd5d08ff66a9b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "i-019c2d6369124824f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_db_instance.chrisbarm_rds01",
            "aws_db_subnet_group.chrisbarm_rds_subnet_group01",
            "aws_iam_instance_profile.chrisbarm_instance_profile01",
            "aws_iam_role.chrisbarm_ec2_role01",
            "aws_security_group.chrisbarm_ec2_sg01",
            "aws_security_group.chrisbarm_rds_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chrisbarm_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:internet-gateway/igw-06bb0c23ce74a0a10",
            "id": "igw-06bb0c23ce74a0a10",
            "owner_id": "198547498722",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-igw01"
            },
            "tags_all": {
              "Name": "chrisbarm-igw01"
            },
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chrisbarm_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0142fcaa6179b07b6",
            "association_id": "eipassoc-0314a076ba8e9c14b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0caad8689b1160cf1",
            "network_interface_id": "eni-05c61b75c04cff248",
            "private_ip": "10.0.1.51",
            "public_ip": "54.196.69.15",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edcc937f92f62a62",
            "tags": {
              "Name": "chrisbarm-nat01"
            },
            "tags_all": {
              "Name": "chrisbarm-nat01"
            },
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.chrisbarm_nat_eip01",
            "aws_internet_gateway.chrisbarm_igw01",
            "aws_subnet.chrisbarm_public_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chrisbarm_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082513b3315de3fa81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0caad8689b1160cf1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-082513b3315de3fa8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-082513b3315de3fa8"
          },
          "dependencies": [
            "aws_eip.chrisbarm_nat_eip01",
            "aws_internet_gateway.chrisbarm_igw01",
            "aws_nat_gateway.chrisbarm_nat01",
            "aws_route_table.chrisbarm_private_rt01",
            "aws_subnet.chrisbarm_public_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chrisbarm_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06bb0c23ce74a0a10",
            "id": "r-rtb-04df8d13efe5cdca71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04df8d13efe5cdca7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-04df8d13efe5cdca7"
          },
          "dependencies": [
            "aws_internet_gateway.chrisbarm_igw01",
            "aws_route_table.chrisbarm_public_rt01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chrisbarm_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:route-table/rtb-082513b3315de3fa8",
            "id": "rtb-082513b3315de3fa8",
            "owner_id": "198547498722",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "chrisbarm-private-rt01"
            },
            "tags_all": {
              "Name": "chrisbarm-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "rtb-082513b3315de3fa8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chrisbarm_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:route-table/rtb-04df8d13efe5cdca7",
            "id": "rtb-04df8d13efe5cdca7",
            "owner_id": "198547498722",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bb0c23ce74a0a10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chrisbarm-public-rt01"
            },
            "tags_all": {
              "Name": "chrisbarm-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "rtb-04df8d13efe5cdca7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chrisbarm_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0360f9e0742d3db6a",
            "region": "us-east-1",
            "route_table_id": "rtb-082513b3315de3fa8",
            "subnet_id": "subnet-06e4b43455b66f6fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chrisbarm_private_rt01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe9455040d91fafc",
            "region": "us-east-1",
            "route_table_id": "rtb-082513b3315de3fa8",
            "subnet_id": "subnet-0d9a396bbd2bd3e1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chrisbarm_private_rt01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chrisbarm_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deac91579472272b",
            "region": "us-east-1",
            "route_table_id": "rtb-04df8d13efe5cdca7",
            "subnet_id": "subnet-0edcc937f92f62a62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chrisbarm_public_rt01",
            "aws_subnet.chrisbarm_public_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf7151bc998ebf3",
            "region": "us-east-1",
            "route_table_id": "rtb-04df8d13efe5cdca7",
            "subnet_id": "subnet-0ba79ad4d030f5e3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chrisbarm_public_rt01",
            "aws_subnet.chrisbarm_public_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chrisbarm_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group/sg-0ad4cd5d08ff66a9b",
            "description": "EC2 app security group (HTTP)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad4cd5d08ff66a9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chrisbarm-ec2-lab",
            "name_prefix": "",
            "owner_id": "198547498722",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chrisbarm-ec2-lab"
            },
            "tags_all": {
              "Name": "chrisbarm-ec2-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sg-0ad4cd5d08ff66a9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chrisbarm_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group/sg-043a735d0ec223f3d",
            "description": "RDS security group (MySQL from EC2 SG only)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043a735d0ec223f3d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad4cd5d08ff66a9b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "arm-sg-rds-lab",
            "name_prefix": "",
            "owner_id": "198547498722",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arm-sg-rds-lab"
            },
            "tags_all": {
              "Name": "arm-sg-rds-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sg-043a735d0ec223f3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chrisbarm_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group/sg-0f0ceedb277e42ffa",
            "description": "VPC Endpoint SG (HTTPS from EC2 only)",
            "egress": [],
            "id": "sg-0f0ceedb277e42ffa",
            "ingress": [],
            "name": "chrisbarm-vpce-sg01",
            "name_prefix": "",
            "owner_id": "198547498722",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chrisbarm-vpce-sg01"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sg-0f0ceedb277e42ffa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chrisbarm_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:subnet/subnet-06e4b43455b66f6fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e4b43455b66f6fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198547498722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-private-1"
            },
            "tags_all": {
              "Name": "chrisbarm-private-1"
            },
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "subnet-06e4b43455b66f6fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:subnet/subnet-0d9a396bbd2bd3e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9a396bbd2bd3e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198547498722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-private-2"
            },
            "tags_all": {
              "Name": "chrisbarm-private-2"
            },
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "subnet-0d9a396bbd2bd3e1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chrisbarm_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:subnet/subnet-0edcc937f92f62a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edcc937f92f62a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "198547498722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-public-1"
            },
            "tags_all": {
              "Name": "chrisbarm-public-1"
            },
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "subnet-0edcc937f92f62a62",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:subnet/subnet-0ba79ad4d030f5e3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba79ad4d030f5e3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "198547498722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-public-2"
            },
            "tags_all": {
              "Name": "chrisbarm-public-2"
            },
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "subnet-0ba79ad4d030f5e3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chrisbarm_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc/vpc-0e95b63f7d1f1cbe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0298026e5175e29fa",
            "default_route_table_id": "rtb-05da73ed21bb52e44",
            "default_security_group_id": "sg-0b3e555a81a4b9644",
            "dhcp_options_id": "dopt-01e734c97ac8d8a76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e95b63f7d1f1cbe9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05da73ed21bb52e44",
            "owner_id": "198547498722",
            "region": "us-east-1",
            "tags": {
              "Name": "chrisbarm-vpc01"
            },
            "tags_all": {
              "Name": "chrisbarm-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpc-0e95b63f7d1f1cbe9",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chrisbarm_interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-046c73937115f52bc",
            "dns_entry": [
              {
                "dns_name": "vpce-046c73937115f52bc-fzooyt1n.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-046c73937115f52bc-fzooyt1n-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-046c73937115f52bc-fzooyt1n-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08235777TXT3HTAUYAL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-046c73937115f52bc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-025d7895ece793543",
              "eni-09987f9dc6d87875b"
            ],
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ceedb277e42ffa"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.16",
                "subnet_id": "subnet-06e4b43455b66f6fc"
              },
              {
                "ipv4": "10.0.102.25",
                "subnet_id": "subnet-0d9a396bbd2bd3e1a"
              }
            ],
            "subnet_ids": [
              "subnet-06e4b43455b66f6fc",
              "subnet-0d9a396bbd2bd3e1a"
            ],
            "tags": {
              "Name": "chrisbarm-vpce-ec2messages"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-046c73937115f52bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-0e0eb711d337caa8e",
            "dns_entry": [
              {
                "dns_name": "vpce-0e0eb711d337caa8e-1ange7xf.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e0eb711d337caa8e-1ange7xf-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e0eb711d337caa8e-1ange7xf-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01465043VQ1213KYQFVB"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z0611032JNNXZ2TN2N4L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e0eb711d337caa8e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03c96faf2041bb35f",
              "eni-0c37b8a49f2181f80"
            ],
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ceedb277e42ffa"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.114",
                "subnet_id": "subnet-06e4b43455b66f6fc"
              },
              {
                "ipv4": "10.0.102.174",
                "subnet_id": "subnet-0d9a396bbd2bd3e1a"
              }
            ],
            "subnet_ids": [
              "subnet-06e4b43455b66f6fc",
              "subnet-0d9a396bbd2bd3e1a"
            ],
            "tags": {
              "Name": "chrisbarm-vpce-kms"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-kms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-0e0eb711d337caa8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-0f1157bbc5bbc6ab7",
            "dns_entry": [
              {
                "dns_name": "vpce-0f1157bbc5bbc6ab7-7imixb4n.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f1157bbc5bbc6ab7-7imixb4n-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f1157bbc5bbc6ab7-7imixb4n-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0610988PFJO83FIN24V"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0826567MH350AJL93GB"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08263942JHRNV0GTA0MO"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0826778T6WSW8CNLS8Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f1157bbc5bbc6ab7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-035485c7db8431727",
              "eni-0c85ca0ad9120a440"
            ],
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ceedb277e42ffa"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.246",
                "subnet_id": "subnet-06e4b43455b66f6fc"
              },
              {
                "ipv4": "10.0.102.92",
                "subnet_id": "subnet-0d9a396bbd2bd3e1a"
              }
            ],
            "subnet_ids": [
              "subnet-06e4b43455b66f6fc",
              "subnet-0d9a396bbd2bd3e1a"
            ],
            "tags": {
              "Name": "chrisbarm-vpce-logs"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-0f1157bbc5bbc6ab7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-01be9c428366afae6",
            "dns_entry": [
              {
                "dns_name": "vpce-01be9c428366afae6-8nnbeo0a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01be9c428366afae6-8nnbeo0a-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01be9c428366afae6-8nnbeo0a-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01469901CIOC5VLIJQOV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01be9c428366afae6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0470fe1ff7f61c56a",
              "eni-0d50f1e854e5eec84"
            ],
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ceedb277e42ffa"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.191",
                "subnet_id": "subnet-06e4b43455b66f6fc"
              },
              {
                "ipv4": "10.0.102.172",
                "subnet_id": "subnet-0d9a396bbd2bd3e1a"
              }
            ],
            "subnet_ids": [
              "subnet-06e4b43455b66f6fc",
              "subnet-0d9a396bbd2bd3e1a"
            ],
            "tags": {
              "Name": "chrisbarm-vpce-secretsmanager"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-01be9c428366afae6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-02cf99e573ec6c371",
            "dns_entry": [
              {
                "dns_name": "vpce-02cf99e573ec6c371-bu7gjxoc.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02cf99e573ec6c371-bu7gjxoc-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02cf99e573ec6c371-bu7gjxoc-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z082357421OH8GORDY5JE"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z082357310CJY93VFH42B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02cf99e573ec6c371",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0751891ab06937f45",
              "eni-09cff2f0bae0b93ac"
            ],
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ceedb277e42ffa"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.183",
                "subnet_id": "subnet-06e4b43455b66f6fc"
              },
              {
                "ipv4": "10.0.102.73",
                "subnet_id": "subnet-0d9a396bbd2bd3e1a"
              }
            ],
            "subnet_ids": [
              "subnet-06e4b43455b66f6fc",
              "subnet-0d9a396bbd2bd3e1a"
            ],
            "tags": {
              "Name": "chrisbarm-vpce-ssm"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-02cf99e573ec6c371",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-0a59d3977f72c43c2",
            "dns_entry": [
              {
                "dns_name": "vpce-0a59d3977f72c43c2-6kwkv3ln.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a59d3977f72c43c2-6kwkv3ln-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a59d3977f72c43c2-6kwkv3ln-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08261833T8RVEP4D79OA"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z01470412FSWX4OL25XZ8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a59d3977f72c43c2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0659e856573b12c55",
              "eni-075a5662840bf21f2"
            ],
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ceedb277e42ffa"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.72",
                "subnet_id": "subnet-06e4b43455b66f6fc"
              },
              {
                "ipv4": "10.0.102.34",
                "subnet_id": "subnet-0d9a396bbd2bd3e1a"
              }
            ],
            "subnet_ids": [
              "subnet-06e4b43455b66f6fc",
              "subnet-0d9a396bbd2bd3e1a"
            ],
            "tags": {
              "Name": "chrisbarm-vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-0a59d3977f72c43c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_subnet.chrisbarm_private_subnets",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chrisbarm_s3_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:vpc-endpoint/vpce-062b17e89c9d013a5",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-062b17e89c9d013a5",
            "ip_address_type": "ipv4",
            "owner_id": "198547498722",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-082513b3315de3fa8"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "chrisbarm-vpce-s3"
            },
            "tags_all": {
              "Name": "chrisbarm-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e95b63f7d1f1cbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "vpce-062b17e89c9d013a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.chrisbarm_private_rt01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "chrisbarm_ec2_sg_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group-rule/sgr-0a74a9b9af948e532",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0a74a9b9af948e532",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ad4cd5d08ff66a9b",
            "security_group_rule_id": "sgr-0a74a9b9af948e532",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sgr-0a74a9b9af948e532",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_ec2_sg01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "chrisbarm_rds_sg_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group-rule/sgr-007dab32d05e6bc32",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-007dab32d05e6bc32",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-043a735d0ec223f3d",
            "security_group_rule_id": "sgr-007dab32d05e6bc32",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sgr-007dab32d05e6bc32",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_rds_sg01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "chrisbarm_vpce_sg_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group-rule/sgr-0488b6ab731bc6cbe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0488b6ab731bc6cbe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f0ceedb277e42ffa",
            "security_group_rule_id": "sgr-0488b6ab731bc6cbe",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sgr-0488b6ab731bc6cbe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chrisbarm_ec2_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group-rule/sgr-00b78af8f1374a6ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00b78af8f1374a6ae",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ad4cd5d08ff66a9b",
            "security_group_rule_id": "sgr-00b78af8f1374a6ae",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sgr-00b78af8f1374a6ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_ec2_sg01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chrisbarm_rds_sg_ingress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group-rule/sgr-0dd55defeacbe380e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0dd55defeacbe380e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ad4cd5d08ff66a9b",
            "region": "us-east-1",
            "security_group_id": "sg-043a735d0ec223f3d",
            "security_group_rule_id": "sgr-0dd55defeacbe380e",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sgr-0dd55defeacbe380e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_ec2_sg01",
            "aws_security_group.chrisbarm_rds_sg01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chrisbarm_vpce_sg_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198547498722:security-group-rule/sgr-0a04b96db7b4bed82",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a04b96db7b4bed82",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ad4cd5d08ff66a9b",
            "region": "us-east-1",
            "security_group_id": "sg-0f0ceedb277e42ffa",
            "security_group_rule_id": "sgr-0a04b96db7b4bed82",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "198547498722",
            "id": "sgr-0a04b96db7b4bed82",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chrisbarm_ec2_sg01",
            "aws_security_group.chrisbarm_vpce_sg01",
            "aws_vpc.chrisbarm_vpc01"
          ]
        }
      ]
    }
  ]
}